//
// Copyright (c) 2000-2018 TeamDev. All rights reserved.
// TeamDev PROPRIETARY and CONFIDENTIAL.
// Use is subject to license terms.
//

syntax = "proto3";

package spine.users;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.users";
option java_outer_classname = "UserProfileProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "spine/core/user_id.proto";
import "spine/net/email_address.proto";
import "spine/net/url.proto";
import "spine/people/person_name.proto";

// General profile information of a user.
//
// This message is used for displaying user information on UI.
//
// Contents of this message are usually obtained from authentication providers.
//
message UserProfile {

    // An email address of the user.
    net.EmailAddress email = 1 [(required) = true];

    // A name of the person, if applicable.
    people.PersonName name = 2;

    // The URL to the user's profile picture, if applicable.
    net.Url photo_url = 3;
}
